--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,8 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h1>Our First Page</h1>
+<p>Hi there!</p>
 
-{{outlet}}
+<ul>
+{{#each model as |monster|}}
+  <li>{{monster.name}} is level {{monster.level}}{{#if monster.active}} and is active{{/if}} <button {{action 'toggleActive' monster}}>Toggle Active</button></li>
+{{/each}}
+</ul>
